<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".auth.ui.SelectUserRoleActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_rounded_dialog">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/appLanguageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="97dp"
                android:text="@string/select_role_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/typeSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appLanguageLabel"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp"
                android:orientation="vertical"
                android:textSize="14sp">

                <TextView
                    android:id="@+id/englishLanguage"
                    android:layout_width="230dp"
                    android:layout_height="37dp"
                    android:background="@drawable/btn_filled_primary"
                    android:backgroundTint="@color/primary"
                    android:gravity="center"
                    android:text="@string/you_re_a_labourer"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/hindiLanguage"
                    android:layout_width="230dp"
                    android:layout_height="37dp"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/btn_filled_primary"
                    android:backgroundTint="@color/primary"
                    android:gravity="center"
                    android:text="@string/You_re_ontractor"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/otherLanguage"
                    android:layout_width="230dp"
                    android:layout_height="37dp"
                    android:background="@drawable/btn_filled_primary"
                    android:backgroundTint="@color/primary"
                    android:gravity="center"
                    android:text="@string/you_re_a_developer"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/textViewSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="65dp"
                android:gravity="center"
                android:text="@string/label_already_have_an_account_log_in"
                android:textColor="@color/color_868686" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>