<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ui.SelectAppLanguageActivity"
    android:background="@color/purple_200">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_rounded_dialog">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/appLanguageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="97dp"
                android:text="@string/select_your_app_language"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/typeSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:layout_below="@+id/appLanguageLabel"
                android:orientation="vertical"
                android:textSize="14sp">

                <TextView
                    android:id="@+id/englishLanguage"
                    android:layout_width="131dp"
                    android:layout_height="37dp"
                    android:background="@drawable/btn_filled_primary"
                    android:backgroundTint="@color/color_CECECE"
                    android:gravity="center"
                    android:text="@string/english"
                    android:textColor="@color/color_3B3B3B"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/hindiLanguage"
                    android:layout_width="131dp"
                    android:layout_height="37dp"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/btn_filled_primary"
                    android:backgroundTint="@color/color_CECECE"
                    android:gravity="center"
                    android:text="@string/hindi"
                    android:textColor="@color/color_3B3B3B"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/otherLanguage"
                    android:layout_width="131dp"
                    android:layout_height="37dp"
                    android:background="@drawable/btn_filled_primary"
                    android:backgroundTint="@color/color_CECECE"
                    android:gravity="center"
                    android:text="@string/others"
                    android:textColor="@color/color_3B3B3B"
                    android:textSize="14sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/textViewProceed"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="65dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/btn_filled_primary"
                android:backgroundTint="@color/color_CECECE"
                android:clickable="true"
                android:focusable="true"
                android:enabled="false"
                android:layout_below="@+id/typeSection"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center_vertical|center"
                android:text="@string/next"
                android:textColor="@color/white"
                tools:ignore="UnusedAttribute" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>



</RelativeLayout>