<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".auth.ui.SignUpActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_rounded_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/enter_your_details"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <include
                android:id="@+id/nameLayout"
                layout="@layout/edit_text_view" />

            <include
                android:id="@+id/experienceLayout"
                layout="@layout/edit_text_view" />

            <include
                android:id="@+id/skillsLayout"
                layout="@layout/spinner_type_row" />

            <include
                android:id="@+id/localityLayout"
                layout="@layout/spinner_type_row" />

            <include
                android:id="@+id/ageLayout"
                layout="@layout/edit_text_view" />

            <include
                android:id="@+id/mobLayout"
                layout="@layout/edit_text_view" />

            <include
                android:id="@+id/otpLayout"
                layout="@layout/edit_text_view" />

            <TextView
                android:id="@+id/textViewSubmit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_filled_primary"
                android:backgroundTint="@color/primary"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="65dp"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center_vertical|center"
                android:text="@string/label_submit"
                android:textColor="@color/white"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/textViewSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/label_already_have_an_account_log_in"

                android:textColor="@color/color_868686" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/progressBar"
        layout="@layout/partial_progress_bar"
        android:visibility="gone"
        tools:visibility="visible" />
</RelativeLayout>